[metadata]
name = colcon-lint
version = attr: colcon_lint.__version__
license = Apache License, Version 2.0
author = Tatsuro Sakaguchi
author_email = tacchan.mello.ioiq@gmail.com
maintainer = Tatsuro Sakaguchi
maintainer_email = tacchan.mello.ioiq@gmail.com
project_urls =
    GitHub = https://github.com/Tacha-S/colcon-lint/
description = Colcon extension for linting ROS package dependencies
long_description = file: README.md
keywords = colcon

[options]
python_requires = >=3.10
install_requires =
    colcon-core>=0.12.0
packages = find:

[options.entry_points]
colcon_core.verb =
    lint = colcon_lint.verb.lint_depends:LintVerb

[flake8]
aggressive = 2
ignore = W503
max-line-length = 119

[isort]
line_length=119
